--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <html> <head>
 
-    <title>Exempel 1 navigation bar</title>
+    <title>Min hemsidar</title>
     
     <meta charset = "utf-8" />
     
